[feat] added linear gradient and fixed scrollbar

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,8 @@
 .PageCentering {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
-  background-color: #ccc;
+  background: linear-gradient(#ccc, white);
 }
 
 .Container {
